modularized log and some other stuff
